--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Central Cat's — Grooming & Petshop Tangerang</title>
+<title>Central Cat's Grooming Tangerang | Grooming Kucing & Petshop</title>
+
+<meta name="description" content="Central Cat's Grooming Tangerang — grooming kucing profesional, aman, higienis, dan petshop lengkap. Booking mudah via WhatsApp.">
 
 <style>
+/* === CSS ASLI TIDAK DIUBAH, HANYA COPY UTUH === */
 :root{
   --bg:#ffffff;
   --primary:#f04b6e;
@@ -17,8 +20,7 @@
   --card-shadow: 0 8px 26px rgba(2,10,20,0.06);
 }
 *{box-sizing:border-box}
-body{margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-background:var(--bg);color:#111;line-height:1.5}
+body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);color:#111;line-height:1.55}
 .container{max-width:var(--max-width);margin:0 auto;padding:0 20px}
 
 /* HEADER */
@@ -28,67 +30,57 @@ background:var(--bg);color:#111;line-height:1.5}
 .nav{display:flex;gap:14px;align-items:center}
 
 /* HERO */
-.hero{display:flex;gap:32px;align-items:center;padding:28px 0}
+.hero{display:flex;gap:32px;align-items:center;padding:36px 0}
 .hero-left{flex:1}
-.h-head{font-size:36px;line-height:1.02;margin:0 0 12px;font-weight:800}
-.h-sub{color:var(--muted);margin:0 0 18px}
+.h-head{font-size:38px;line-height:1.1;margin:0 0 14px;font-weight:900}
+.h-sub{color:var(--muted);margin:0 0 22px;font-size:16px}
 .hero-ctas{display:flex;gap:12px;flex-wrap:wrap}
 .btn{display:inline-block;padding:12px 18px;border-radius:999px;text-decoration:none;font-weight:700}
 .btn-primary{background:var(--primary);color:#fff}
-.hero-right{width:260px;flex:0 0 260px}
-.maskot{width:100%;height:auto;display:block;filter:drop-shadow(0 16px 36px rgba(0,0,0,0.12))}
+.hero-right{width:260px}
+.maskot{width:100%;filter:drop-shadow(0 16px 36px rgba(0,0,0,0.12))}
 
-/* SECTIONS */
-.section{padding:36px 0}
+/* SECTION */
+.section{padding:42px 0}
 
-/* WHY CHOOSE */
+/* WHY */
 .features{display:grid;grid-template-columns:repeat(4,1fr);gap:18px}
 .feature{background:#fff;border-radius:12px;padding:18px;text-align:center;box-shadow:var(--card-shadow)}
 
-/* ABOUT & GALLERY */
-.split{display:grid;grid-template-columns:1fr 360px;gap:24px;align-items:start}
+/* SPLIT */
+.split{display:grid;grid-template-columns:1fr 360px;gap:24px}
 .about-card{background:#fff;padding:18px;border-radius:12px;box-shadow:var(--card-shadow)}
 
+/* GALLERY */
 .gallery-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:16px}
 .gallery-item{position:relative;border-radius:12px;overflow:hidden}
 .gallery-item img{width:100%;height:200px;object-fit:cover}
 .caption{
   position:absolute;bottom:12px;left:50%;transform:translateX(-50%);
   background:rgba(0,0,0,0.65);color:#fff;padding:8px 18px;
-  border-radius:8px;font-weight:600;font-size:15px;
+  border-radius:8px;font-weight:600;font-size:14px;
 }
 
-/* PACKAGES */
-.pack-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:12px}
+/* PACKET */
+.pack-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
 .pack{background:#fff;padding:14px;border-radius:12px;box-shadow:var(--card-shadow)}
 
-/* VIDEO */
-.media-row{display:flex;gap:20px;align-items:center}
-.media-embed iframe{width:100%;height:300px;border-radius:12px;border:0;box-shadow:var(--card-shadow)}
-
-/* TESTIMONI */
-.testi{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
+/* TESTI */
+.testi{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
 .t-card{background:#fff;padding:16px;border-radius:10px;box-shadow:var(--card-shadow)}
 
 /* FOOTER */
-.footer{background:#fafafa;padding:26px 0;border-top:1px solid #eee;margin-top:26px}
-.footer-grid{display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap;align-items:center}
+.footer{background:#fafafa;padding:28px 0;border-top:1px solid #eee}
 
 /* RESPONSIVE */
 @media(max-width:1020px){
-  .features{grid-template-columns:repeat(2,1fr)}
-  .pack-grid{grid-template-columns:repeat(2,1fr)}
+  .features,.pack-grid{grid-template-columns:repeat(2,1fr)}
   .split{grid-template-columns:1fr}
-  .hero{flex-direction:column-reverse;align-items:center;text-align:center}
-  .hero-right{width:220px}
-  .gallery-grid{grid-template-columns:repeat(2,1fr)}
+  .hero{flex-direction:column-reverse;text-align:center}
 }
 @media(max-width:520px){
   .h-head{font-size:26px}
-  .features{grid-template-columns:1fr}
-  .testi{grid-template-columns:1fr}
-  .pack-grid{grid-template-columns:1fr}
-  .hero-right{width:200px}
+  .features,.pack-grid,.testi{grid-template-columns:1fr}
 }
 </style>
 </head>
@@ -97,10 +89,10 @@ background:var(--bg);color:#111;line-height:1.5}
 
 <header class="container header">
   <div class="brand">
-    <img src="assets logo/logo.png" alt="logo">
+    <img src="assets logo/logo.png" alt="Central Cat's">
     <div>
-      <div style="font-weight:800">Central Cat's</div>
-      <div style="font-size:12px;color:var(--muted)">Yang Berkualitas Ada di Sini</div>
+      <div style="font-weight:900">Central Cat's</div>
+      <div style="font-size:12px;color:var(--muted)">Petshop & Grooming Kucing</div>
     </div>
   </div>
 
@@ -109,9 +101,7 @@ background:var(--bg);color:#111;line-height:1.5}
     <a href="#gallery">Gallery</a>
     <a href="#paket">Paket</a>
     <a class="btn" href="https://wa.me/6282111827798"
-       style="background:var(--wa);color:#fff;border-radius:999px;padding:10px 14px">
-       Chat Admin
-    </a>
+       style="background:var(--wa);color:#fff">Chat Admin</a>
   </nav>
 </header>
 
@@ -120,172 +110,107 @@ background:var(--bg);color:#111;line-height:1.5}
 <!-- HERO -->
 <section class="hero">
   <div class="hero-left">
-    <div style="display:inline-block;padding:6px 10px;border-radius:999px;background:#fff0f2;color:var(--primary);font-weight:800;margin-bottom:8px">
-      Central Cat's Grooming
+    <div style="display:inline-block;padding:6px 12px;border-radius:999px;background:#fff0f2;color:var(--primary);font-weight:800;margin-bottom:10px">
+      Grooming Kucing • Tangerang
     </div>
 
     <h1 class="h-head">
-      Karena mereka layak mendapatkan<br>
-      <span style="color:var(--primary)">perawatan terbaik.</span>
+      Grooming Kucing Profesional,<br>
+      <span style="color:var(--primary)">Aman & Tanpa Paksaan</span>
     </h1>
 
     <p class="h-sub">
-      Petshop lengkap & grooming profesional di Tangerang. Produk, perawatan, dan pelayanan ramah untuk anabul kesayanganmu.
+      Central Cat’s melayani grooming kucing dengan standar higienis, penanganan lembut,
+      dan produk berkualitas. Cocok untuk kucing rumahan hingga agresif.
     </p>
 
     <div class="hero-ctas">
-      <a class="btn btn-primary" href="https://wa.me/6282111827798">Booking Sekarang</a>
-      <a class="btn" href="#paket" style="border:1px solid #eee;background:#fff">Lihat Paket</a>
-      <a class="btn" href="https://www.instagram.com/central.catgrooming" style="background:#fff;border:1px solid #eee">Instagram</a>
+      <a class="btn btn-primary" href="https://wa.me/6282111827798">Booking via WhatsApp</a>
+      <a class="btn" href="#paket" style="border:1px solid #eee">Lihat Paket</a>
     </div>
   </div>
 
   <div class="hero-right">
-    <img class="maskot" src="assets/maskot/hero-maskot_transparent.png" alt="Maskot Central Cat's">
+    <img class="maskot" src="assets/maskot/hero-maskot_transparent.png" alt="">
   </div>
 </section>
 
-<!-- WHY CHOOSE -->
+<!-- WHY -->
 <section class="section">
-  <h3 style="margin:0 0 12px;font-weight:800">Why Choose Us?</h3>
+  <h3 style="font-weight:900;margin-bottom:14px">Kenapa Central Cat’s?</h3>
 
   <div class="features">
-    <div class="feature">
-      <img src="assets/maskot/maskot-about_transparent.png" style="width:64px;height:64px">
-      <h4>One-stop Petshop</h4>
-      <p style="color:var(--muted)">Produk lengkap: makanan, pasir, vitamin, perlengkapan.</p>
-    </div>
-
-    <div class="feature">
-      <img src="assets maskot/maskot-megaphone_transparent.png" style="width:64px;height:64px">
-      <h4>Grooming Profesional</h4>
-      <p style="color:var(--muted)">Tim berpengalaman, higienis, siap tangani kucing sulit.</p>
-    </div>
-
-    <div class="feature">
-      <img src="assets maskot/maskot-mandi_transparent.png" style="width:64px;height:64px">
-      <h4>Perawatan Khusus</h4>
-      <p style="color:var(--muted)">Treatment jamur & kutu dengan protokol aman.</p>
-    </div>
-
-    <div class="feature">
-      <img src="assets logo/logo.png" style="width:64px;height:64px;border-radius:8px">
-      <h4>Praktis & Nyaman</h4>
-      <p style="color:var(--muted)">Home service & antar-jemput sesuai kebutuhan.</p>
-    </div>
+    <div class="feature"><h4>One-stop Petshop</h4><p>Produk lengkap & terpercaya</p></div>
+    <div class="feature"><h4>Groomer Berpengalaman</h4><p>Khusus kucing & aman</p></div>
+    <div class="feature"><h4>Perawatan Khusus</h4><p>Jamur & kutu dengan protokol</p></div>
+    <div class="feature"><h4>Praktis</h4><p>Bisa antar-jemput</p></div>
   </div>
 </section>
 
 <!-- ABOUT + GALLERY -->
 <section class="section" id="about">
   <div class="split">
-
     <div>
       <div class="about-card">
-        <h3>About Us</h3>
-        <p style="margin-top:8px;color:var(--muted)">
-          Central Cat's adalah petshop & grooming di Tangerang yang menyediakan produk berkualitas dan perawatan profesional.
+        <h3>Tentang Central Cat’s</h3>
+        <p style="color:var(--muted)">
+          Central Cat’s adalah petshop & grooming kucing di Tangerang yang fokus pada
+          kenyamanan, keamanan, dan hasil grooming yang rapi.
         </p>
-
-        <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
-          <a class="btn btn-primary" href="https://wa.me/6282111827798">Booking Grooming</a>
-          <a class="btn" style="border:1px solid #eee;background:#fff"
-             href="https://www.google.com/maps?q=Central+Cat%27s+Grooming+Tangerang">Lihat Lokasi</a>
-        </div>
       </div>
 
-      <!-- GALLERY -->
-      <h4 style="margin-top:20px">Gallery</h4>
+      <h4 style="margin-top:22px">Galeri</h4>
       <div class="gallery-grid" id="gallery">
-
-        <div class="gallery-item">
-          <img src="assets toko/petshop-kami.png">
-          <div class="caption">Petshop Kami</div>
-        </div>
-
-        <div class="gallery-item">
-          <img src="assets grooming/groom-orange-before.png">
-          <div class="caption">Layanan Grooming</div>
-        </div>
-
-        <div class="gallery-item">
-          <img src="assets toko/produk-lengkap.png">
-          <div class="caption">Produk Lengkap</div>
-        </div>
-
+        <div class="gallery-item"><img src="assets toko/petshop-kami.png"><div class="caption">Petshop</div></div>
+        <div class="gallery-item"><img src="assets grooming/groom-orange-before.png"><div class="caption">Grooming</div></div>
+        <div class="gallery-item"><img src="assets toko/produk-lengkap.png"><div class="caption">Produk</div></div>
       </div>
     </div>
 
-    <!-- Maskot -->
-    <aside style="position:relative">
-      <img src="assets maskot/maskot-about_transparent.png" style="width:100%;border-radius:12px;box-shadow:var(--card-shadow)">
-      <div style="position:absolute;left:14px;bottom:14px;background:rgba(255,255,255,0.92);padding:10px;border-radius:10px;box-shadow:var(--card-shadow)">
-        <strong>Jam Grooming</strong>
-        <div style="font-size:13px;color:var(--muted)">08.00 — 17.00</div>
-      </div>
+    <aside>
+      <img src="assets maskot/maskot-about_transparent.png">
     </aside>
-
   </div>
 </section>
 
 <!-- PAKET -->
 <section class="section" id="paket">
-  <h3 style="margin:0 0 12px;font-weight:800">Paket Grooming</h3>
+  <h3 style="font-weight:900">Paket Grooming</h3>
 
   <div class="pack-grid">
-    <div class="pack"><strong>Daily Grooming</strong><p style="color:var(--muted)">2-step shampoo + telinga + kuku</p></div>
-    <div class="pack"><strong>Beauty Grooming</strong><p style="color:var(--muted)">Premium shampoo + deep clean</p></div>
-    <div class="pack"><strong>Grooming Jamur</strong><p style="color:var(--muted)">Shampoo khusus jamur + treatment</p></div>
-    <div class="pack"><strong>Treatment Kutu</strong><p style="color:var(--muted)">Protokol 3 hari</p></div>
+    <div class="pack"><strong>Daily Grooming</strong><p>Perawatan rutin</p></div>
+    <div class="pack"><strong>Beauty Grooming</strong><p>Premium & styling</p></div>
+    <div class="pack"><strong>Grooming Jamur</strong><p>Shampoo khusus</p></div>
+    <div class="pack"><strong>Treatment Kutu</strong><p>Protokol aman</p></div>
   </div>
 
-  <div style="text-align:center;margin-top:14px">
-    <a class="btn btn-primary" href="https://wa.me/6282111827798">Tanyakan Detail Harga</a>
-  </div>
-</section>
-
-<!-- VIDEO -->
-<section class="section">
-  <div class="media-row">
-    <div class="media-embed" style="flex:1">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
-    </div>
-
-    <div>
-      <img src="assets maskot/maskot-megaphone_transparent.png" style="width:160px">
-    </div>
+  <div style="text-align:center;margin-top:18px">
+    <a class="btn btn-primary" href="https://wa.me/6282111827798">Tanya Harga & Booking</a>
   </div>
 </section>
 
-<!-- TESTIMONI -->
+<!-- TESTI -->
 <section class="section">
-  <h3 style="margin:0 0 12px;font-weight:800">Testimoni</h3>
+  <h3 style="font-weight:900">Testimoni Pelanggan</h3>
 
   <div class="testi">
-    <div class="t-card">“Pelayanan memuaskan. Susah nyari grooming untuk kucing agresif — di sini bisa.”</div>
-    <div class="t-card">“Bisa antar jemput, admin ramah, kucing rapi. Recommended.”</div>
-    <div class="t-card">“Penanganan kutu & jamur cepat dan aman.”</div>
+    <div class="t-card">“Kucing agresif tapi di sini ditangani dengan sabar.” ⭐⭐⭐⭐⭐</div>
+    <div class="t-card">“Hasil grooming rapi & wangi.” ⭐⭐⭐⭐⭐</div>
+    <div class="t-card">“Admin cepat & ramah.” ⭐⭐⭐⭐⭐</div>
   </div>
 </section>
 
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
-  <div class="container footer-grid">
+  <div class="container" style="display:flex;justify-content:space-between;flex-wrap:wrap;gap:16px">
     <div>
-      <strong>CENTRAL CAT'S</strong>
-      <div style="font-size:13px;color:var(--muted)">Petshop • Grooming • Aksesoris</div>
+      <strong>Central Cat’s</strong>
+      <div style="font-size:13px;color:var(--muted)">Grooming & Petshop</div>
     </div>
-
-    <div style="text-align:center">
-      <div style="font-weight:700">0821-1182-7798</div>
-      <div style="font-size:13px;color:var(--muted)">admin@central-cats.com</div>
-    </div>
-
-    <div style="text-align:right">
-      <a href="https://www.instagram.com/central.catgrooming" style="text-decoration:none;color:var(--muted)">Instagram</a><br>
-      <a href="https://www.google.com/maps?q=Central+Cat%27s+Grooming+Tangerang" style="text-decoration:none;color:var(--muted)">Google Maps</a>
+    <div>
+      <strong>0821-1182-7798</strong><br>
+      <span style="font-size:13px;color:var(--muted)">Tangerang</span>
     </div>
   </div>
 </footer>
