--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;backgr
 
       <h4 style="margin-top:22px">Galeri</h4>
       <div class="gallery-grid" id="gallery">
-        <div class="gallery-item"><img src="assets toko/petshop-kami.png"><div class="caption">Petshop</div></div>
+        <div class="gallery-item"><img src="assets/toko/petshop-kami.png"><div class="caption">Petshop</div></div>
         <div class="gallery-item"><img src="assets grooming/groom-orange-before.png"><div class="caption">Grooming</div></div>
         <div class="gallery-item"><img src="assets toko/produk-lengkap.png"><div class="caption">Produk</div></div>
       </div>
