--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;backgr
 
 <header class="container header">
   <div class="brand">
-    <img src="assets logo/logo.png" alt="Central Cat's">
+    <img <img src="assets logo/logo.png" alt="Central Cat's">
     <div>
       <div style="font-weight:900">Central Cat's</div>
       <div style="font-size:12px;color:var(--muted)">Petshop & Grooming Kucing</div>
@@ -161,14 +161,30 @@ body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;backgr
 
       <h4 style="margin-top:22px">Galeri</h4>
       <div class="gallery-grid" id="gallery">
-        <div class="gallery-item"><img src="assets/toko/petshop-kami.png"><div class="caption">Petshop</div></div>
-        <div class="gallery-item"><img src="assets grooming/groom-orange-before.png"><div class="caption">Grooming</div></div>
-        <div class="gallery-item"><img src="assets toko/produk-lengkap.png"><div class="caption">Produk</div></div>
-      </div>
-    </div>
+
+  <div class="gallery-item">
+    <img src="assets%20toko/Petshop%20Kami.jpg" alt="Petshop">
+    <div class="caption">Petshop</div>
+  </div>
+
+  <div class="gallery-item">
+    <img src="assets%20grooming/groom-orange-before.png" alt="Grooming">
+    <div class="caption">Grooming</div>
+  </div>
+
+  <div class="gallery-item">
+    <img src="assets%20toko/Produk%20Lengkap.jpg" alt="Produk">
+    <div class="caption">Produk</div>
+  </div>
+
+</div>
+
+
+</div>
+
 
     <aside>
-      <img src="assets maskot/maskot-about_transparent.png">
+      <img src="assets maskot/hero-maskot_transparent.png" alt="Maskot Central Cat's">
     </aside>
   </div>
 </section>
